--- a/SPA/src/app/vehicle/new/new.component.scss
+++ b/SPA/src/app/vehicle/new/new.component.scss
@@ -8,18 +8,137 @@
   justify-content: center;
 
   &__title {
-    font-size: 3rem;
-    margin-bottom: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
   }
 
   &__make {
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
 
-    &::after {
-      content: "";
-      margin-top: 5px;
-      border-bottom: 1px solid grey;
-      display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &--title {
+      font-size: 1.8;
+      font-weight: 700;
+    }
+
+    &--dropdown {
+      float: right;
+      width: 20rem;
+      padding: 2px 1rem;
+      border-radius: 3px;
+      font-size: 1.8rem;
+
+      transition: all .3s;
+
+      &:hover {
+        border: 1px solid black;
+      }
+    }
+  }
+
+  &__registered {
+    margin-bottom: 1rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &--question {
+      font-size: 1.8rem;
+      font-weight: 700;
+    }
+
+    &--answer {
+      width: 10rem;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      &-radio {
+        height: 1.5rem;
+        width: 1.5rem;
+        margin-right: 2px;
+      }
+  
+      &-title {
+        font-size: 1.8rem;
+      }
+    }
+  }
+
+  &__features {
+    border: 1px solid grey;
+    border-radius: 3px;
+    padding: .5rem;
+
+    display: grid;
+    grid-template-columns: repeat(2, minmax(3rem, 1fr));
+    grid-column-gap: 1.5rem;
+
+    &-title {
+      font-size: 1.8rem;
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: .5rem;
+    }
+    
+    &--feature {
+      display: flex;
+      align-items: center;
+      
+      &-checkbox {
+        width: 1.8rem;
+        height: 1.8rem;
+        margin-right: .5rem;
+      }
+
+      &-title {
+        font-size: 1.8rem;
+      }
+    }
+  }
+
+  &__contact {
+    margin: 1.5rem 0;
+
+    &--label {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-right: 1rem;
+    }
+
+    &--input {
+      float: right;
+      border-radius: 3px;
+      padding: 2px .5rem;
+      width: 20rem;
+      font-size: 1.8rem;
+    }
+  }
+
+  &__submit {
+    width: 10rem;
+    height: 4rem;
+    margin-top: 1rem;
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 3px;
+    box-shadow: 0 5px 3px grey;
+    font-size: 1.8rem;
+
+    transition: all .2s;
+
+    &:hover {
+      background-color: #eee;
+    }
+
+    &:active {
+      transform: translateY(8px);
+      box-shadow: none;
     }
   }
 }
