Created get vehicle list and delete vehicle methods. Styled vehicle list. Fixed json error on vehicles controller.

--- a/SPA/src/app/vehicles/vehicle-home/vehicle-home.component.html
+++ b/SPA/src/app/vehicles/vehicle-home/vehicle-home.component.html
@@ -1,5 +1,6 @@
 <div class="vehicle-home">
   <div class="vehicle-home__container">
+    <a routerLink="/vehicles/list" class="vehicle-home__container--btn">Vehicles List</a>
     <a routerLink="/vehicles/new" class="vehicle-home__container--btn">Add Vehicle</a>
   </div>
 </div>
