--- a/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
+++ b/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
@@ -1,3 +1,22 @@
-<p>
-  vehicle-list works!
-</p>
+<div *ngIf="vehicles" class="vehicles">
+  <table class="vehicles-table">
+    <tr>
+      <th>ID</th>
+      <th>Make</th>
+      <th>Model</th>
+      <th>Contact Name</th>
+      <th>&nbsp;</th>
+      <th>&nbsp;</th>
+    </tr>
+    <tr 
+      *ngFor="let vehicle of vehicles; let i = index" 
+      class="vehicles-table__vehicle-row">
+      <td>{{ vehicle.id }}</td>
+      <td>{{ vehicle.make.name }}</td>
+      <td>{{ vehicle.model.name }}</td>
+      <td>{{ vehicle.contactName }}</td>
+      <td class="vehicles-table__vehicle-row--edit" [routerLink]="['/vehicles/new']">Edit</td>
+      <td class="vehicles-table__vehicle-row--delete" (click)="onVehicleDelete(i, vehicle.id)">X</td>
+    </tr>
+  </table>
+</div>
