--- a/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.html
+++ b/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.html
@@ -60,8 +60,9 @@
         <input
           type="checkbox"
           [id]="feature.id"
-          [value]="feature.selected"
+          [value]="feature.id"
           [formControlName]="i"
+          (click)="onFeatureSelect(feature.id)"
           class="vehicle-form__features--feature-checkbox">
         <label [for]="feature.id" class="vehicle-form__features--feature-title">{{ feature.name }}</label>
         <br>
