--- a/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.scss
+++ b/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.scss
@@ -120,30 +120,61 @@
     }
   }
 
-  &__submit {
-    width: 10rem;
-    height: 4rem;
-    margin-top: 1rem;
-    background-color: white;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    box-shadow: 0 5px 3px grey;
-    outline: none;
-    font-size: 1.8rem;
+  &__actions {
+    width: 22rem;
 
-    transition: all .15s;
+    display: flex;
+    justify-content: space-between;
 
-    &:hover {
-      background-color: #eee;
+    &--submit {
+      width: 10rem;
+      height: 4rem;
+      margin-top: 1rem;
+      background-color: white;
+      border: 1px solid lightgrey;
+      border-radius: 3px;
+      box-shadow: 0 5px 3px grey;
+      outline: none;
+      font-size: 1.8rem;
+  
+      transition: all .15s;
+  
+      &:hover {
+        background-color: #eee;
+      }
+  
+      &:active {
+        transform: translateY(6px);
+        box-shadow: none;
+      }
+  
+      &:disabled {
+        box-shadow: none;
+      }
     }
 
-    &:active {
-      transform: translateY(8px);
-      box-shadow: none;
-    }
+    &--delete {
+      width: 10rem;
+      height: 4rem;
+      margin-top: 1rem;
+      background-color: red;
+      border: 1px solid #ff6060;
+      border-radius: 3px;
+      box-shadow: 0 5px 3px #9e3434;
+      outline: none;
+      font-size: 1.8rem;
+      color: white;
+  
+      transition: all .15s;
 
-    &:disabled {
-      box-shadow: none;
+      &:hover {
+        background-color: #ff6666;
+      }
+  
+      &:active {
+        transform: translateY(6px);
+        box-shadow: none;
+      }
     }
   }
 }
