Created create dialog box method.

--- a/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.html
+++ b/SPA/src/app/vehicles/vehicle-new/vehicle-new.component.html
@@ -1,3 +1,4 @@
+<ng-template appPlaceholder></ng-template>
 <ng-container *ngIf="newVehicleForm">
 <form [formGroup]="newVehicleForm" (ngSubmit)="onSubmit()" class="vehicle-form">
   <h1 class="vehicle-form__title">Add New Vehicle</h1>
