--- a/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
+++ b/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
@@ -1,19 +1,26 @@
 <div *ngIf="vehicles" class="vehicles">
-  <table class="vehicles-table">
+  <div class="vehicles__make-filter">
+    <label for="make-filter" class="vehicles__make-filter--title">Make:</label>
+    <select
+      class="vehicles__make-filter--makes" id="make-filter"
+      (change)="onMakeFilterChange(+$event.target.value)">
+      <option value="-1" selected></option>
+      <option *ngFor="let make of makes" [value]="make.id">{{ make.name }}</option>
+    </select>
+  </div>
+  <table class="vehicles__table">
     <tr>
       <th>ID</th>
       <th>Make</th>
       <th>Model</th>
       <th>Contact Name</th>
-      <th>&nbsp;</th>
     </tr>
     <tr 
-      *ngFor="let vehicle of vehicles; let i = index" 
-      class="vehicles-table__vehicle-row">
+      *ngFor="let vehicle of filteredVehicles; let i = index" 
+      class="vehicles__table--vehicle-row" (click)="onVehicleView(vehicle.id)">
       <td>{{ vehicle.id }}</td>
       <td>{{ vehicle.make.name }}</td>
       <td>{{ vehicle.model.name }}</td>
       <td>{{ vehicle.contactName }}</td>
-      <td class="vehicles-table__vehicle-row--edit" [routerLink]="['/vehicles', vehicle.id]">Edit</td>
   </table>
 </div>
