--- a/SPA/src/styles.scss
+++ b/SPA/src/styles.scss
@@ -15,7 +15,7 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 400;
 }
