Added pagination component to vehicles list.

--- a/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
+++ b/SPA/src/app/vehicles/vehicle-list/vehicle-list.component.html
@@ -35,4 +35,5 @@
         <button type="button" class="vehicles__table--view-btn" (click)="onVehicleView(vehicle.id)">View/Edit</button>
       </ng-container>
   </div>
+  <pagination [page-size]="query.pageSize" [total-items]="queryResult.totalItems" (page)="onPageChange($event)"></pagination>
 </div>
