--- a/SPA/src/app/vehicles/vehicle-view/vehicle-photo/vehicle-photo.component.html
+++ b/SPA/src/app/vehicles/vehicle-view/vehicle-photo/vehicle-photo.component.html
@@ -1,3 +1,3 @@
-<p>
-  vehicle-photo works!
-</p>
+<ng-container *ngIf="photos">
+  <img *ngFor="let photo of photos" [src]="photo.thumbnailUrl">
+</ng-container>
