--- a/SPA/src/app/vehicles/vehicle-view/vehicle-photo/vehicle-photo.component.html
+++ b/SPA/src/app/vehicles/vehicle-view/vehicle-photo/vehicle-photo.component.html
@@ -1,10 +1,16 @@
 <span *ngIf="!vehicleId">Create a car first.</span>
-<span *ngIf="vehicleId && photos.length === 0">No photo found for this car.</span>
 
-<ng-container *ngIf="vehicleId && photos">
-  <img *ngFor="let photo of photos" [src]="photo.thumbnailUrl">
-</ng-container>
+<div class="vehicle-photo" *ngIf="vehicleId">
+  <span *ngIf="vehicleId && photos.length === 0">No photo found for this car.</span>
 
-<ng-container *ngIf="vehicleId">
-  <input type="file" title="Select a photo" (change)="onPhotoSelect($event)">
-</ng-container>
+  <div class="vehicle-photo__album" *ngIf="photos">
+    <div class="vehicle-photo__album-frame" *ngFor="let photo of photos">
+      <img [src]="photo.thumbnailUrl" class="vehicle-photo__album-img">
+    </div>
+  </div>
+
+  <label for="photo-upload" class="vehicle-photo__upload">
+    {{ photoUploadPercentage > 0 ? 'Uploading %' + photoUploadPercentage : 'Upload'}}
+  </label>
+  <input id="photo-upload" type="file" class="hidden" (change)="onPhotoSelect($event)">
+</div>
