--- a/SPA/src/app/shared/dialog-box/dialog-box.component.scss
+++ b/SPA/src/app/shared/dialog-box/dialog-box.component.scss
@@ -1,6 +1,8 @@
 .backdrop {
   height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
   position: absolute;
   background-color: rgba(0,0,0,.5);
   z-index: 10;
